Correction of wrong width howitwork_title

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -573,7 +573,7 @@ h5 {
             padding: 4rem 2rem;
             &_h2 {
                 padding: 0rem 0rem 2rem 0;
-                width: 50%;
+                width: 80%;
                 margin: auto;
             }
             &_ul {
